<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>buildsystem</artifactId>
    <version>2.16.3</version>

    <name>BuildSystem</name>
    <description>Easy to use system for builders, with lots of great features</description>
    <url>https://buildsystem.eintosti.de</url>

    <packaging>jar</packaging>

    <parent>
        <groupId>de.eintosti</groupId>
        <artifactId>buildsystem-parent</artifactId>
        <version>parent</version>
    </parent>

    <repositories>
        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>${spigotVersion}</version>
            <scope>provided</scope>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.10</version>
            <scope>provided</scope>
        </dependency>
        <!-- FastBoard -->
        <dependency>
            <groupId>fr.mrmicky</groupId>
            <artifactId>fastboard</artifactId>
            <version>1.2.0</version>
        </dependency>
        <!-- Abstraction -->
        <dependency>
            <groupId>de.eintosti</groupId>
            <artifactId>buildsystem-abstraction</artifactId>
            <version>abstraction</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.eintosti</groupId>
            <artifactId>buildsystem-v1_12_R1</artifactId>
            <version>1.12-R1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.eintosti</groupId>
            <artifactId>buildsystem-v1_13_R1</artifactId>
            <version>1.13-R1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.eintosti</groupId>
            <artifactId>buildsystem-v1_14_R1</artifactId>
            <version>1.14-R1</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>BuildSystem</finalName>
        <directory>../target</directory>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>config.yml</include>
                    <include>plugin.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>